# learncmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  module.cmake  qtconfig.cmake  vs2019-build-sln.bat  vs2019-start-sln.bat
hello/: CMakeLists.txt  hello.cpp  hello.h  hello_globals.h
helloworld/: main.cpp
main/: CMakeLists.txt  main.cpp
plugin/: CMakeLists.txt  world.h
widget/: CMakeLists.txt  hello.cpp  hello_global.h  main.cpp  rc.qrc  theme.qss
widget/ui/: logindialog.cpp  logindialog.h  logindialog.ui  predefine.h  qssshowwidget.cpp  qssshowwidget.h  qssshowwidget.ui  resizehandler.cpp  resizehandler.h  userdialog.cpp  userdialog.h  userdialog.ui
